[package]
name = "cluster1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpl-token-metadata = "1.13.2"
solana-client = "1.16.8"
solana-program = "1.16.8"
solana-sdk = "1.16.8"
spl-token = "4.0.0"
tokio = "^1"
